--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 miniquad = {path = "../miniquad"}
 glam = {version = "0.20.2", features = ["scalar-math"] }
 quad-rand = "0.1"
+xorshift = "0.1"
